--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -15,11 +15,21 @@ body {
   color: #fafafa;
   background-color: #272b35;
   font-size: 18px;
-  margin: 0px 3em;
+  margin: 30px 3em;
 }
 
 .button {
   background-color: #4D7FFF;
   border-radius: 5px;
+}
+
+#gameCanvas {
+  height: 100%;
+}
+
+#help-btn {
+  position: fixed;
+  right: 15px;
+  bottom: 15px;
 }
 /*# sourceMappingURL=styles.css.map */
